plugins {
    id 'org.springframework.boot' version '2.3.1.RELEASE'
    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
    id 'java'
    id 'idea'
    id 'application'
}

group = 'org.akinyemi.tobi'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '14'

application {
    mainClass = 'org.akinyemi.tobi.challenge.ChallengeApplication'
}

repositories {
    mavenCentral()
}

// Enable preview features for Java 14
tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

dependencies {
    // Spring framework
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Swagger API Docs for spring
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    // HTML Swagger Documentation
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    // Translation
    compile 'com.google.cloud:google-cloud-translate:1.94.5'

    // Small byte-util library
    implementation 'at.favre.lib:bytes:1.3.0'

    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
}
